Migrate from ProcessBuilder to LabKeyProcessBuilder